--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="Yellow">#ffcc00</color>
     <color name="sormh">#003366</color>
+    <color name="khacestari">#686860</color>
 </resources>
